Closed
Bug 1825913
Opened 2 years ago
Closed 2 years ago
Intermittent Android mda dom/media/<random_test>.html | application crashed [@ mozilla::AudioCallbackDriver::StartStream]
Categories
(Core :: Audio/Video, defect, P1)
Core
Audio/Video
Tracking
()
RESOLVED
FIXED
113 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox111 | --- | unaffected |
| firefox112 | --- | unaffected |
| firefox113 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: karlt)
References
(Regression)
Details
(Keywords: crash, intermittent-failure, regression)
Crash Data
Attachments
(1 file)
Filed by: imoraru [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=411037448&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/JNkx-xk4TGuNzLE_E3zCEw/runs/0/artifacts/public/logs/live_backing.log
[task 2023-04-01T05:07:00.639Z] 05:06:26 INFO - TEST-START | dom/media/webaudio/test/test_audioContextGC.html
[task 2023-04-01T05:07:00.639Z] 05:06:46 INFO - wait for org.mozilla.geckoview.test_runner complete; top activity=com.google.android.apps.nexuslauncher
[task 2023-04-01T05:07:00.639Z] 05:06:46 INFO - runtestsremote.py | Application ran for: 0:00:47.880625
[task 2023-04-01T05:07:00.639Z] 05:06:47 INFO - mozcrash Copy/paste: /builds/task_168032458743209/fetches/minidump-stackwalk/minidump-stackwalk --symbols-url=https://symbols.mozilla.org/ --cyborg=/tmp/tmpkg5bszqx/692d61bc-3e20-9a68-b79f-f66c0c03d80f.trace /tmp/tmpoo_abxyg/692d61bc-3e20-9a68-b79f-f66c0c03d80f.dmp /builds/task_168032458743209/workspace/build/symbols
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - mozcrash Saved minidump as /builds/task_168032458743209/workspace/build/blobber_upload_dir/692d61bc-3e20-9a68-b79f-f66c0c03d80f.dmp
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - mozcrash Saved app info as /builds/task_168032458743209/workspace/build/blobber_upload_dir/692d61bc-3e20-9a68-b79f-f66c0c03d80f.extra
[task 2023-04-01T05:07:00.639Z] 05:07:00 WARNING - PROCESS-CRASH | dom/media/webaudio/test/test_audioContextGC.html | application crashed [@ mozilla::AudioCallbackDriver::StartStream]
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - Mozilla crash reason: MOZ_ASSERT(mAudioStreamState == AudioStreamState::None)
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - Crash dump filename: /tmp/tmpoo_abxyg/692d61bc-3e20-9a68-b79f-f66c0c03d80f.dmp
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - Operating system: Android
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - 0.0.0 Linux 4.19.239-gef76da0f3927-ab8811085 #1 SMP PREEMPT Fri Jul 8 08:04:03 UTC 2022 aarch64
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - CPU: arm64
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - 8 CPUs
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - Crash reason: SIGSEGV / SEGV_MAPERR
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - Crash address: 0x0
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - Process uptime: not available
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - Thread 44 Thread-38 (crashed)
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - 0 libxul.so!mozilla::AudioCallbackDriver::StartStream() [GraphDriver.cpp:7437637d0b5c2745440bfeba4adb64689d24044f : 765 + 0x0]
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x0 = 0x0000000000000005 x1 = 0x00000000ffffffff
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x2 = 0x0000001e00000000 x3 = 0x0000006d4e82d090
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x4 = 0x0000006d4e82c160 x5 = 0x0000006d4e82d120
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x6 = 0x0000002400000000 x7 = 0x0000002600000000
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x8 = 0x0000006ce17dbd50 x9 = 0x0000000000000000
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x10 = 0x0000006cdaa64c44 x11 = 0x0000000000000005
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x12 = 0x000000000000006f x13 = 0x0000000000000053
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x14 = 0x0000007004d7e279 x15 = 0x0000007004d75662
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x16 = 0x0000006ce17d8470 x17 = 0x0000007004d9d720
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x18 = 0x0000006c2b16e000 x19 = 0x00000000000002fd
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x20 = 0x0000006d4e82e000 x21 = 0x0000006c2f30a290
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x22 = 0x0000000000000000 x23 = 0x0000000000000060
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x24 = 0x0000006d4e82e000 x25 = 0x0000000000000001
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x26 = 0x00000000000000aa x27 = 0x0000006cdd27a2a8
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x28 = 0x0000000000000000 fp = 0x0000006d4e82d340
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - lr = 0x0000006cd5409680 sp = 0x0000006d4e82d210
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - pc = 0x0000006cd5409698
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - Found by: given as instruction pointer in context
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - 1 libxul.so!mozilla::AudioCallbackDriver::Init() [GraphDriver.cpp:7437637d0b5c2745440bfeba4adb64689d24044f : 713 + 0x4]
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x19 = 0x0000006c2f30a1a0 x20 = 0x0000006c3f215068
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x21 = 0x0000006c3f214f00 x22 = 0x0000000000000000
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x23 = 0x0000000000000060 x24 = 0x0000006d4e82e000
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x25 = 0x0000000000000001 x26 = 0x00000000000000aa
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x27 = 0x0000006cdd27a2a8 x28 = 0x0000000000000000
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - fp = 0x0000006d4e82d590 sp = 0x0000006d4e82d370
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - pc = 0x0000006cd54088a0
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - Found by: call frame info
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - 2 libxul.so!mozilla::AsyncCubebTask::Run() [GraphDriver.cpp:7437637d0b5c2745440bfeba4adb64689d24044f : 312 + 0x8]
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x19 = 0x0000006c2f33b768 x20 = 0x0000006c2f32e580
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x21 = 0x0000000000000000 x22 = 0x0000000000000000
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x23 = 0x0000006c2f5e9818 x24 = 0xaaaaaaaaaaaaaaaa
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x25 = 0x0000000000000000 x26 = 0x00000000000000aa
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x27 = 0x0000006cdd27a2a8 x28 = 0x0000000000000000
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - fp = 0x0000006d4e82d5e0 sp = 0x0000006d4e82d5e0
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - pc = 0x0000006cd5408338
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - Found by: call frame info
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - 3 libxul.so!nsThreadPool::Run() [nsThreadPool.cpp:7437637d0b5c2745440bfeba4adb64689d24044f : 343 + 0x10]
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x19 = 0x0000006c2f5e9740 x20 = 0x0000006c2f5e9778
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x21 = 0x0000000000000000 x22 = 0x0000000000000000
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x23 = 0x0000006c2f5e9818 x24 = 0xaaaaaaaaaaaaaaaa
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x25 = 0x0000000000000000 x26 = 0x00000000000000aa
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x27 = 0x0000006cdd27a2a8 x28 = 0x0000000000000000
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - fp = 0x0000006d4e82d700 sp = 0x0000006d4e82d610
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - pc = 0x0000006cd3264aa0
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - Found by: call frame info
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - 4 libxul.so!nsThread::ProcessNextEvent(bool, bool*) [nsThread.cpp:7437637d0b5c2745440bfeba4adb64689d24044f : 1233 + 0x10]
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x19 = 0x0000006cdf68b5c0 x20 = 0x0000006d4e82d8d4
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x21 = 0x0000006cdf68b608 x22 = 0x0000006cdf68b6e8
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x23 = 0x00000ab6bb1b4fe5 x24 = 0x0000006d4e82e000
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x25 = 0x0000000000000000 x26 = 0x0000006d4e82d7e0
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x27 = 0x0000006d4e82d7e0 x28 = 0x0000000000000000
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - fp = 0x0000006d4e82d870 sp = 0x0000006d4e82d760
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - pc = 0x0000006cd325ec74
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - Found by: call frame info
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - 5 libxul.so!NS_ProcessNextEvent(nsIThread*, bool) [nsThreadUtils.cpp:7437637d0b5c2745440bfeba4adb64689d24044f : 479 + 0x0]
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x19 = 0x0000006cdf68b5c0 x20 = 0x0000000000000000
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x21 = 0x0000006d4e82e000 x22 = 0x0000006c2f320ef0
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x23 = 0x0000006c2f320ee0 x24 = 0x0000006d4e82e000
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x25 = 0x0000006d4e82e000 x26 = 0x000000000000001c
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x27 = 0x0000000000044000 x28 = 0x0000000000046000
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - fp = 0x0000006d4e82d8e0 sp = 0x0000006d4e82d8d0
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - pc = 0x0000006cd326312c
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - Found by: call frame info
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - 6 libxul.so!mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate*) [MessagePump.cpp:7437637d0b5c2745440bfeba4adb64689d24044f : 300 + 0x8]
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x19 = 0x0000006c2f320ec0 x20 = 0x0000006d4e82da40
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x21 = 0x0000006cdf68b5c0 x22 = 0x0000006c2f320ef0
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x23 = 0x0000006c2f320ee0 x24 = 0x0000006d4e82e000
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x25 = 0x0000006d4e82e000 x26 = 0x000000000000001c
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x27 = 0x0000000000044000 x28 = 0x0000000000046000
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - fp = 0x0000006d4e82d920 sp = 0x0000006d4e82d910
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - pc = 0x0000006cd39a4e24
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - Found by: call frame info
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - 7 libxul.so!MessageLoop::RunInternal() [message_loop.cc:7437637d0b5c2745440bfeba4adb64689d24044f : 369 + 0x14]
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x19 = 0x0000006d4e82da40 x20 = 0x0000006d4e82e000
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x21 = 0x0000006cdf68b608 x22 = 0x0000000000000011
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x23 = 0x0000006c2f30f9b0 x24 = 0x0000006d4e82e000
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x25 = 0x0000006d4e82dcb0 x26 = 0x0000006d4e82dff8
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x27 = 0x0000000000044000 x28 = 0x0000000000046000
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - fp = 0x0000006d4e82d9a0 sp = 0x0000006d4e82d970
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - pc = 0x0000006cd3942ba0
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - Found by: call frame info
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - 8 libxul.so!MessageLoop::RunHandler() [message_loop.cc:7437637d0b5c2745440bfeba4adb64689d24044f : 362]
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - Found by: inlining
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - 9 libxul.so!MessageLoop::Run() [message_loop.cc:7437637d0b5c2745440bfeba4adb64689d24044f : 344 + 0x4]
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x19 = 0x0000006d4e82da40 x20 = 0x0000006d4e82e000
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x21 = 0x0000006cdf68b608 x22 = 0x0000000000000011
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x23 = 0x0000006c2f30f9b0 x24 = 0x0000006d4e82e000
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x25 = 0x0000006d4e82dcb0 x26 = 0x0000006d4e82dff8
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x27 = 0x0000000000044000 x28 = 0x0000000000046000
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - fp = 0x0000006d4e82d9e0 sp = 0x0000006d4e82d9c0
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - pc = 0x0000006cd3942afc
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - Found by: call frame info
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - 10 libxul.so!nsThread::ThreadFunc(void*) [nsThread.cpp:7437637d0b5c2745440bfeba4adb64689d24044f : 391 + 0x4]
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x19 = 0x0000006cdf68b5c0 x20 = 0x0000006cdf68b610
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x21 = 0x0000006cdf68b608 x22 = 0x0000000000000011
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x23 = 0x0000006c2f30f9b0 x24 = 0x0000006d4e82e000
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x25 = 0x0000006d4e82dcb0 x26 = 0x0000006d4e82dff8
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x27 = 0x0000000000044000 x28 = 0x0000000000046000
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - fp = 0x0000006d4e82dbc0 sp = 0x0000006d4e82da00
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - pc = 0x0000006cd325bac8
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - Found by: call frame info
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - 11 libnss3.so!_pt_root [ptthread.c:7437637d0b5c2745440bfeba4adb64689d24044f : 201 + 0x4]
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x19 = 0x0000006c2f30f9b0 x20 = 0x0000006cdfb8bd48
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x21 = 0x0000006cdfb8b000 x22 = 0x0000006cdfb8b000
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x23 = 0x0000000000000002 x24 = 0x0000006d4e82dcb0
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x25 = 0x0000006d4e82dcb0 x26 = 0x0000006d4e82dff8
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x27 = 0x0000000000044000 x28 = 0x0000000000046000
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - fp = 0x0000006d4e82dc10 sp = 0x0000006d4e82dc10
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - pc = 0x0000006cdfa140dc
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - Found by: call frame info
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - 12 libc.so + 0xb62b8
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x19 = 0x0000006d4e82dcb0 x20 = 0x0000007005370000
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x21 = 0x0000006d4e82dcb0 x22 = 0x0000000000001859
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x23 = 0x000000000000183a x24 = 0x0000006d4e82dcb0
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x25 = 0x0000006d4e82dcb0 x26 = 0x0000006d4e82dff8
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - x27 = 0x0000000000044000 x28 = 0x0000000000046000
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - fp = 0x0000006d4e82dc50 sp = 0x0000006d4e82dc50
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - pc = 0x0000007004e062bc
[task 2023-04-01T05:07:00.639Z] 05:07:00 INFO - Found by: call frame info
[task 2023-04-01T05:07:00.640Z] 05:07:00 INFO - 13 libc.so + 0x52fb8
[task 2023-04-01T05:07:00.640Z] 05:07:00 INFO - sp = 0x0000006d4e82dc60 pc = 0x0000007004da2fbc
[task 2023-04-01T05:07:00.640Z] 05:07:00 INFO - Found by: previous frame's frame pointer
[task 2023-04-01T05:07:00.640Z] 05:07:00 INFO - 14 libc.so + 0xb61e4
[task 2023-04-01T05:07:00.640Z] 05:07:00 INFO - sp = 0x0000006d4e82dc78 pc = 0x0000007004e061e8
[task 2023-04-01T05:07:00.640Z] 05:07:00 INFO - Found by: stack scanning
[task 2023-04-01T05:07:00.640Z] 05:07:00 INFO - 15 libnss3.so!pt_recvfrom_cont [ptio.c:7437637d0b5c2745440bfeba4adb64689d24044f : 0 + 0x0]
[task 2023-04-01T05:07:00.640Z] 05:07:00 INFO - sp = 0x0000006d4e82dd18 pc = 0x0000006cdfa13f94
[task 2023-04-01T05:07:00.640Z] 05:07:00 INFO - Found by: stack scanning
Updated•2 years ago
|
Keywords: regression
Regressed by: 1801190
Summary: Intermittent dom/media/webaudio/test/test_audioContextGC.html | application crashed [@ mozilla::AudioCallbackDriver::StartStream] → Intermittent Android mda dom/media/<random_test>.html | application crashed [@ mozilla::AudioCallbackDriver::StartStream]
Comment 3•2 years ago
|
||
Hi Karl! Can you please take a look at this?
Thank you!
Flags: needinfo?(karlt)
Comment 4•2 years ago
|
||
Set release status flags based on info from the regressing bug 1801190
status-firefox111:
--- → unaffected
status-firefox112:
--- → unaffected
status-firefox113:
--- → affected
status-firefox-esr102:
--- → unaffected
| Assignee | ||
Comment 5•2 years ago
|
||
aaudio_stream_start() does not notify CUBEB_STATE_ERROR directly.
It would record an error on an atomic or this might happen elsewhere.
CUBEB_STATE_ERROR is notified asynchronously on another thread.
The assertion is invalid and needs to be removed.
Assignee: nobody → karlt
Severity: -- → S4
Flags: needinfo?(karlt)
Priority: -- → P1
| Assignee | ||
Comment 6•2 years ago
|
||
aaudio_stream_start() notifies CUBEB_STATE_ERROR asynchronously from another
thread.
| Comment hidden (Intermittent Failures Robot) |
Pushed by ktomlinson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/02f63cb7c759
remove invalid AudioStreamState::None assertion after cubeb_stream_start() failure r=pehrsons
Comment 9•2 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch
| Comment hidden (Intermittent Failures Robot) |
You need to log in
before you can comment on or make changes to this bug.
Description
•