Bug 1825913 remove invalid AudioStreamState::None assertion after cubeb_stream_start() failure r=pehrsons

aaudio_stream_start() notifies CUBEB_STATE_ERROR asynchronously from another
thread.

Differential Revision: https://phabricator.services.mozilla.com/D174384